# derive_dirty

./: Cargo.toml  README.md
src/: lib.rs
tests/: derive.rs
