[package]
name = "derive_dirty"
version = "0.1.0"
authors = ["David Jobe <david.jobe@mobility46.se>"]
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/derive.rs"

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.8"

